--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "directories": {
     "test": "test"
-    
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "test": "mocha",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,7 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "mocha": "^5.2.0",
     "pg": "^7.4.3"
   },
   "devDependencies": {
