--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ node_js:
 
 before_script: 
   - psql -c 'create database  registration_app_database;' -U postgres
-  - psql -U postgres -d registration_app_database -a -f sqlTemplate.sql
-  - psql -U postgres -d registration_app_database -a -f insertTowns.sql
+  - psql -U postgres -d registration_app_database -a -f sql/sqlTemplate.sql
+  - psql -U postgres -d registration_app_database -a -f sql/insertTowns.sql
 
 addons:
     apt:
